--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
    
 
-<%=render partial: "event", collection: @all %>
+<%=render partial: "static_pages/event", collection: @all %>
 
 
 </div>
